--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,14 @@
-<p>board works!</p>
+<h1>Current Player: {{ player }}</h1>
+
+<button (click)="newGame()">Start a new game</button>
+
+<h2 *ngIf="winner">The winner is {{ winner }}</h2>
+
+<main>
+  <app-square
+    *ngFor="let val of squares; let i = index"
+    [value]="val"
+    (click)="makeMove(i)"
+  >
+  </app-square>
+</main>
